--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetKnow">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.JetKnow.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -33,7 +38,7 @@
             android:name=".ContributeActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.JetKnow.NoActionBar"></activity>
+            android:theme="@style/Theme.JetKnow.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
