--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetKnow">
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetKnow.NoActionBar" >
@@ -30,7 +30,7 @@
         </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.JetKnow.NoActionBar" />
@@ -47,12 +47,12 @@
             android:value="AIzaSyAwWCf3GnkmAzCmyUKZJTrWV2Bno-J3644" />
 
         <activity
-            android:name=".ContributeActivity"
+            android:name=".activities.ContributeActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetKnow.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetKnow.NoActionBar">
