--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.0-beta01'
+        compose_version = '1.0.0-rc02'
     }
     repositories {
         google()
@@ -11,8 +11,8 @@ buildscript {
 
         
 
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha14'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32'
+        classpath 'com.android.tools.build:gradle:7.0.0-beta05'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
         classpath 'com.google.gms:google-services:4.3.8'
 
 
