--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ buildscript {
 
         
 
-        classpath 'com.android.tools.build:gradle:7.0.0-beta05'
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
-        classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.gms:google-services:4.3.10'
 
 
         // NOTE: Do not place your application dependencies here; they belong
